--- a/workspace/files/ui/templates/files/ui/index.html
+++ b/workspace/files/ui/templates/files/ui/index.html
@@ -312,6 +312,9 @@
 <!-- Monaco Editor for text/code viewing and editing -->
 <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
 
+<!-- File locking (must load before viewers) -->
+<script src="{% static 'files/ui/js/file_lock.js' %}"></script>
+
 <!-- File browser -->
 <script src="{% static 'files/ui/js/file_browser.js' %}"></script>
 
